<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="adapter"
            type="com.capgemini.dcx.weatherapp.view.search.SearchAdapter" />

        <variable
            name="viewModel"
            type="com.capgemini.dcx.weatherapp.view.history.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_extra_small"
        tools:context=".view.search.SearchFragment">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_city_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:queryHint="@string/hint_search" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_page_error"
            style="@style/PageErrorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/label_page_error"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_search_results"
            style="@style/SearchSectionItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/label_search_results"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_city_input" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_search_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:paddingLeft="@dimen/margin_large"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_search_results"
            app:setAdapter="@{adapter}"
            tools:listitem="@layout/search_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>